# ot-send-deep-sleep

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/ot_send/: CMakeLists.txt  common.c  send_udp.c
components/ot_send/include/: ot_send.h
components/utilities/: CMakeLists.txt  hexdump.c  sleep.c  txpower.c  uuid.c
components/utilities/include/: hexdump.h  sleep.h  time.h  time_api.h  uuid.h
components/utilities/time/: debug.c  time.c  time_api.c
components/workload/: CMakeLists.txt  aperiodic.c  client.c  common.c  periodic.c
components/workload/client/: request.c  response_callback.c
components/workload/common/: coap_common.c  common.c
components/workload/include/: dependencies.h  experiment.h  inline.h  macro.h  print_macro.h  workload.h
main/: CMakeLists.txt  Kconfig.projbuild  esp_ot_sleepy_device.c  handlers.c  main.c  time.c  time.h  wakeup.c
main/battery/: battery.c
main/event/: debug.c  event.c
main/handlers/: backoff.c  debug.c  handlers.c  wakeup.c
main/include/: battery.h  event.h  experiment.h  flags.h  init.h  main.h  payload.h  sleep.h  storage.h  time.h  uuid.h
main/init/: init.c
main/payload/: event_payload.c  payload.c
main/sleep/: sleep.c
main/storage/: storage.c
main/time/: debug.c  time.c
main/uuid/: uuid.c
main/wakeup/: wakeup.c  wakeup_init.c
test/events_and_battery/: 2secondbackoff-not-enough-br.txt  2secondbackoff-not-enough.txt  36packet-5secondbackoff-success-br.txt  36packet-5secondbackoff-success.txt  36packets-30mins.txt  36packets-problem-br.txt  36packets-problem.txt  36packetsuccess-br.txt  36packetsuccess-sed.txt  firstEventCloseToBattery.txt  test1.txt
test/events_only/: log.txt
